--- a/css/home.css
+++ b/css/home.css
@@ -19,7 +19,7 @@ body {
     background-color: #1E1E1E;
     padding: 3px;
     display: flex;
-    margin-left: 500px;
+    margin-right: 1500px;
     flex-direction: column;
     justify-content: flex-start; 
     position: fixed;
