--- a/css/g.css
+++ b/css/g.css
@@ -26,7 +26,7 @@
 
  .game-card {
             position: relative;
-            background-color: #fff;
+            background-color: none;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             overflow: hidden;
@@ -51,7 +51,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) scale(1);
-            font-size: 1.5em; /* Font size for title */
+            font-size: 0.5em; /* Font size for title */
             margin: 0; /* Remove default margin */
             color: white; /* White text for contrast */
             text-shadow: 0 0 5px rgba(0, 0, 0, 0.7); /* Text shadow for better readability */
