--- a/css/g.css
+++ b/css/g.css
@@ -27,11 +27,12 @@
  .game-card {
             position: relative;
             background-color: none;
-            border-radius: 8px;
+            border-radius: 20px;
+     border: none;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             overflow: hidden;
-            width: 150px; /* Fixed width for cards */
-            height: 150px; /* Fixed height for cards */
+            width: 110px; /* Fixed width for cards */
+            height: 130px; /* Fixed height for cards */
             transition: box-shadow 0.3s, backdrop-filter 0.3s;
             z-index: 10;
         }
@@ -51,7 +52,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) scale(1);
-            font-size: 0.5em; /* Font size for title */
+            font-size: 1.0em; /* Font size for title */
             margin: 0; /* Remove default margin */
             color: white; /* White text for contrast */
             text-shadow: 0 0 5px rgba(0, 0, 0, 0.7); /* Text shadow for better readability */
